# func_me

./: Cargo.toml  LICENSE  README.md
examples/: ollama_fn.rs  single_function.rs
src/: lib.rs  main.rs
