[package]
name = "func_me"
version = "0.2.1"
edition = "2021"

[lib]
name = "auto_toolbox"
proc-macro = true
path = "src/lib.rs"

[[bin]]
name = "func_me"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
syn = { "version" = "*", "features" = ["full"] }
quote = "*"
proc-macro2 = "*"
derive-quote-to-tokens = "0.1.1"
serde_json = { "version" = "1.0.125", "features" = ["raw_value"] }
regex = "1.10.6"
anyhow = "1.0.86"
reqwest = { version = "0.12.7", features = ["json"] }
